force-app/trigger-actions-framework/main/default/objects/Trigger_Action__mdt/fields/After_Undelete__c.field-meta.xml
<CustomField>
    <fullName>After_Undelete__c</fullName>
    <description>Enter the name of the sObject you want to have this action execute on during the after undelete context</description>
    <inlineHelpText>Enter the name of the sObject you want to have this action execute on during the after undelete context</inlineHelpText>
    <label>After Undelete</label>
    <referenceTo>sObject_Trigger_Setting__mdt</referenceTo>
    <relationshipLabel>After Undelete</relationshipLabel>
    <relationshipName>After_Undelete_Actions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>