force-app/trigger-actions-framework/main/default/objects/Trigger_Action__mdt/fields/Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Name__c</fullName>
    <description>Enter the name of the Apex Class which defines the action to be taken</description>
    <inlineHelpText>Enter the name of the Apex Class which defines the action to be taken</inlineHelpText>
    <label>Apex Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>