force-app/trigger-actions-framework/main/default/objects/Trigger_Action__mdt/fields/Before_Delete__c.field-meta.xml
<CustomField>
    <fullName>Before_Delete__c</fullName>
    <description>Enter the name of the sObject you want to have this action execute on during the before delete context</description>
    <inlineHelpText>Enter the name of the sObject you want to have this action execute on during the before delete context</inlineHelpText>
    <label>Before Delete</label>
    <referenceTo>sObject_Trigger_Setting__mdt</referenceTo>
    <relationshipLabel>Before Delete</relationshipLabel>
    <relationshipName>Before_Delete_Actions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>