force-app/trigger-actions-framework/main/default/objects/Trigger_Action__mdt/fields/Before_Insert__c.field-meta.xml
<CustomField>
    <fullName>Before_Insert__c</fullName>
    <description>Enter the name of the sObject you want to have this action execute on during the before insert context</description>
    <inlineHelpText>Enter the name of the sObject you want to have this action execute on during the before insert context</inlineHelpText>
    <label>Before Insert</label>
    <referenceTo>sObject_Trigger_Setting__mdt</referenceTo>
    <relationshipLabel>Before Insert</relationshipLabel>
    <relationshipName>Before_Insert_Actions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>