force-app/trigger-actions-framework/main/default/objects/Trigger_Action__mdt/fields/Before_Update__c.field-meta.xml
<CustomField>
    <fullName>Before_Update__c</fullName>
    <description>Enter the name of the sObject you want to have this action execute on during the before update context</description>
    <inlineHelpText>Enter the name of the sObject you want to have this action execute on during the before update context</inlineHelpText>
    <label>Before Update</label>
    <referenceTo>sObject_Trigger_Setting__mdt</referenceTo>
    <relationshipLabel>Before Update</relationshipLabel>
    <relationshipName>Before_Update_Actions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>