force-app/trigger-actions-framework/main/default/objects/Trigger_Action__mdt/fields/Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Name__c</fullName>
    <description>Enter the API name of the flow you would like to execute.</description>
    <inlineHelpText>Enter the API name of the flow you would like to execute.</inlineHelpText>
    <label>Flow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>