force-app/trigger-actions-framework/main/default/objects/Trigger_Action__mdt/validationRules/Only_One_Context.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_One_Context</fullName>
    <active>true</active>
    <description>Throws an error if the user selects more than one context.</description>
    <errorConditionFormula>OR(
	NOT(ISBLANK(Before_Insert__c)) &amp;&amp;
	OR(
		NOT(ISBLANK(After_Insert__c)),
		NOT(ISBLANK(Before_Update__c)),
		NOT(ISBLANK(After_Update__c)),
		NOT(ISBLANK(Before_Delete__c)),
		NOT(ISBLANK(After_Delete__c)),
		NOT(ISBLANK(After_Undelete__c))
	),
	NOT(ISBLANK(After_Insert__c)) &amp;&amp;
	OR(
		NOT(ISBLANK(Before_Insert__c)),
		NOT(ISBLANK(Before_Update__c)),
		NOT(ISBLANK(After_Update__c)),
		NOT(ISBLANK(Before_Delete__c)),
		NOT(ISBLANK(After_Delete__c)),
		NOT(ISBLANK(After_Undelete__c))
	),
	NOT(ISBLANK(Before_Update__c)) &amp;&amp;
	OR(
		NOT(ISBLANK(Before_Insert__c)),
		NOT(ISBLANK(After_Insert__c)),
		NOT(ISBLANK(After_Update__c)),
		NOT(ISBLANK(Before_Delete__c)),
		NOT(ISBLANK(After_Delete__c)),
		NOT(ISBLANK(After_Undelete__c))
	),
	NOT(ISBLANK(After_Update__c)) &amp;&amp;
	OR(
		NOT(ISBLANK(Before_Insert__c)),
		NOT(ISBLANK(After_Insert__c)),
		NOT(ISBLANK(Before_Update__c)),
		NOT(ISBLANK(Before_Delete__c)),
		NOT(ISBLANK(After_Delete__c)),
		NOT(ISBLANK(After_Undelete__c))
	),
	NOT(ISBLANK(Before_Delete__c)) &amp;&amp;
	OR(
		NOT(ISBLANK(Before_Insert__c)),
		NOT(ISBLANK(After_Insert__c)),
		NOT(ISBLANK(Before_Update__c)),
		NOT(ISBLANK(After_Update__c)),
		NOT(ISBLANK(After_Delete__c)),
		NOT(ISBLANK(After_Undelete__c))
	),
	NOT(ISBLANK(After_Delete__c)) &amp;&amp;
	OR(
		NOT(ISBLANK(Before_Insert__c)),
		NOT(ISBLANK(After_Insert__c)),
		NOT(ISBLANK(Before_Update__c)),
		NOT(ISBLANK(After_Update__c)),
		NOT(ISBLANK(Before_Delete__c)),
		NOT(ISBLANK(After_Undelete__c))
	),
	NOT(ISBLANK(After_Undelete__c)) &amp;&amp;
	OR(
		NOT(ISBLANK(Before_Insert__c)),
		NOT(ISBLANK(After_Insert__c)),
		NOT(ISBLANK(Before_Update__c)),
		NOT(ISBLANK(After_Update__c)),
		NOT(ISBLANK(Before_Delete__c)),
		NOT(ISBLANK(After_Delete__c))
	)
)</errorConditionFormula>
    <errorMessage>You can only choose one context</errorMessage>
</ValidationRule>